# models/denounce.js
@@ -4,7 +4,7 @@ const Schema = mongoose.Schema;
 
 const commentary = {
     commentaryId: {type : String},
-    date: {type : String},
+    date: {type : Date},
     content: {type : String}
 }
 
@@ -12,6 +12,8 @@ var DenounceModel = new Schema({
     denounceId: {type : String},
     userEmail: {type : String},
     cep: {type : String},
+    lat: {type : String},
+    lng: {type : String},
     street: {type : String},
     number: {type : String},
     complement: {type : String},
@@ -19,12 +21,12 @@ var DenounceModel = new Schema({
     description: {type : String},
     images: {type : [String], default: null},
     videos: {type : [String], default: null},
-    date: {type : String},
+    date: {type : Date},
     status: {type: String, default: 'PENDENTE'},
-    commentaries: {type: [commentary], default: null}
+    commentaries: {type: [Object], default: null}
 },
     { versionKey: false }
 );
 
-//Export function to create "UsersModel" model class
+//Export function to create "DenounceModel" model class
 module.exports = mongoose.model('Denounce', DenounceModel )
